# falsy-nft-marketplace

./: README.md  docker-compose.yaml  local.sh  renovate.json  skaffold.gateway.yaml  skaffold.infra.yaml  skaffold.monitoring.yaml  skaffold.yaml
account-service/: .dockerignore  Dockerfile  build.gradle.kts  dev.env
auth-service/: Dockerfile  build.gradle.kts  dev.env  keyspace.cql  package.json  test.env
auth-service/src/: app.module.ts  main.ts
auth-service/src/auth/: auth.module.ts
auth-service/test/: auth.e2e-spec.ts
blockchain-scan-service/: package-lock.json  package.json
contracts/: gas-report.txt  hardhat.config.ts  package.json
gateway/: .gitignore  .meshrc.yaml  .meshrc.yml  Dockerfile  dev.env  package-lock.json  package.json  pnpm-lock.yaml
gateway/src/: index.ts  main.ts
marketplace/: .dockerignore  .eslintrc.cjs  Dockerfile  codegen.ts  dev.env  houdini.config.js  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.js  vite.config.ts
marketplace/src/: app.d.ts  client.ts
nft-service/: Cargo.toml
search-service/: build.gradle  build.gradle.kts
src/: docker-compose.yaml  local.sh
src/account-service/: .dockerignore  Dockerfile  build.gradle.kts  dev.env
src/auth-service/: .env
src/contracts/: .gitignore  README.md
src/gateway/: .meshrc.yml  Dockerfile  dev.env  pnpm-lock.yaml
src/marketplace/: Dockerfile  dev.env  package-lock.json  package.json  schema.graphql
src/nft-service/: Cargo.toml  Dockerfile
src/nft-service/src/: main.rs
src/storage-service/: go.mod  server.go
(+110 files in other folders)
