[package]
name = "nft-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
bigdecimal = "0.3.1"
catalytic = "0.1.12"
futures = "0.3.28"
num-bigint = "0.4.3"
scylla = "0.8.1"
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.3.2"
